gatekeeper/constraints/ban-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: k8spsphostnetworkingports
spec:
  enforcementAction: deny # violating Pod is allowed with a warning
  match:
    # This ensures every newly created or updated Pod will be evaluated
    # including Pods generated by Deployments and Rollouts
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
  parameters:
    hostNetwork: false
