gatekeeper/constraints/enforce-naming-convention.yaml
# Enforce all Deployments must start with either api- or web-
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredPrefixes
metadata:
  enforcementAction: deny
  name: enforce-deployment-prefixes
  # what
  annotations:
    argocd.argoproj.io/sync-wave: "2" # Make sure this runs in your constraints wave

spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    prefixes:
      - "api-"
      - "web-"
