gatekeeper/constraints/mh-resources-limits.yaml
apiVersion: contraints.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  enforcementAction: warn
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Deployment"]
  parameters:
    limits:
      - cpu
      - memory
